--- a/group-genius-backend/.env.example
+++ b/group-genius-backend/.env.example
@@ -12,8 +12,10 @@ DATABASE_PASSWORD=your-aiven-password-here
 # Email service toggle (set to true to enable real email sending)
 EMAIL_ENABLED=false
 
-# Frontend URL for email links
-FRONTEND_URL=http://localhost:3000
+# Frontend URL for email links and CORS
+# Example (local): http://localhost:3000
+# Example (prod): https://your-frontend.vercel.app
+FRONTEND_URL=https://your-frontend-url
 
 # SMTP Configuration
 SMTP_HOST=smtp.gmail.com
