--- a/group-genius-backend/.env.example
+++ b/group-genius-backend/.env.example
@@ -13,8 +13,7 @@ DATABASE_PASSWORD=your-aiven-password-here
 EMAIL_ENABLED=false
 
 # Frontend URL for email links and CORS
-# Example (local): http://localhost:3000
-# Example (prod): https://your-frontend.vercel.app
+# Example: https://app.your-frontend.com
 FRONTEND_URL=https://your-frontend-url
 
 # SMTP Configuration
