--- a/group-genius-backend/src/main/resources/application.properties
+++ b/group-genius-backend/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.connection-timeout=60000
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.minimum-idle=2
-spring.datasource.hikari.idle-timeout=${HIKARI_IDLE_TIMEOUT_MS}
+spring.datasource.hikari.idle-timeout=${HIKARI_IDLE_TIMEOUT_MS:600000}
 spring.datasource.hikari.max-lifetime=600000
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
@@ -57,7 +57,7 @@ spring.mail.password=${SMTP_PASSWORD:}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=${SMTP_TIMEOUT_MS}
+spring.mail.properties.mail.smtp.timeout=${SMTP_TIMEOUT_MS:5000}
 spring.mail.properties.mail.smtp.writetimeout=5000
 
 # Email Templates Configuration
