--- a/group-genius-backend/.env.example
+++ b/group-genius-backend/.env.example
@@ -16,6 +16,9 @@ EMAIL_ENABLED=false
 # Example: https://app.your-frontend.com
 FRONTEND_URL=https://your-frontend-url
 
+# Allow localhost origins (set to false in production deployments)
+APP_ALLOW_DEV_ORIGINS=true
+
 # SMTP Configuration
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
