--- a/group-genius-backend/src/main/resources/application.properties
+++ b/group-genius-backend/src/main/resources/application.properties
@@ -49,6 +49,9 @@ app.email.enabled=${EMAIL_ENABLED:false}
 # Frontend URL for email links
 app.frontend.url=${FRONTEND_URL}
 
+# Allow localhost origins (set false in production)
+app.allow.dev.origins=${APP_ALLOW_DEV_ORIGINS:true}
+
 # SMTP Configuration for Gmail (example)
 spring.mail.host=${SMTP_HOST:smtp.gmail.com}
 spring.mail.port=${SMTP_PORT:587}
